--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,3 +1,6 @@
 PORT = 8000
 
 DB_URL = mongodb://abuzarkhan:Abuzar12@ac-ynpaav9-shard-00-00.tzi2xn3.mongodb.net:27017,ac-ynpaav9-shard-00-01.tzi2xn3.mongodb.net:27017,ac-ynpaav9-shard-00-02.tzi2xn3.mongodb.net:27017/?replicaSet=atlas-coftaf-shard-0&ssl=true&authSource=admin
+
+JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
+JWT_EXPIRES = 7d
