--- a/backend/config/.env
+++ b/backend/config/.env
@@ -4,3 +4,10 @@ DB_URL = mongodb://abuzarkhan:Abuzar12@ac-ynpaav9-shard-00-00.tzi2xn3.mongodb.ne
 
 JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
+ACTIVATION_SECRET_KEY = abuzarkhan123456@121jbub432nas
+
+SMPT_HOST = smpt.gmail.com
+SMPT_PORT = 465
+SMPT_PASSWORD = gnsn uqjn iyrv hemu
+SMPT_MAIL= abuzarkhan1242@gmail.com
+
